# circuitry

./: LICENSE  README.md  pyproject.toml  setup.cfg
circuitry/: __init__.py  utils.py
circuitry/circuit/: __init__.py  circuit.py  edge_level_masked_transformer.py
circuitry/hypothesis_testing/: __init__.py  circuit_experiment.py  minimality.py  non_equivalence.py  non_independence.py  partial_necessity.py  sufficiency.py
circuitry/mechanistic_interpretability/: __init__.py  base_task.py
circuitry/mechanistic_interpretability/examples/: __init__.py  canonical_circuits.py  greater_than.py  induction.py  tracr.py
circuitry/mechanistic_interpretability/examples/docstring/: constants.py  prompts.py  task.py
circuitry/mechanistic_interpretability/examples/ioi/: __init__.py  ioi_dataset.py  task.py
paper_experiments/experiments/: README.md  main.py  run_all.sh  run_job.sh  run_sweep_job.sh
paper_experiments/experiments/task_configs/: docstring.yaml  induction.yaml  tracr-proportion.yaml  tracr-reverse.yaml
paper_experiments/experiments/test_configs/: minimality.yaml  non-equivalence.yaml  non-independence.yaml  partial-necessity.yaml  sufficiency.yaml
paper_experiments/figures/: generate_figures.py
tests/: utils.py
tests/circuit/: test_circuit.py
tests/examples/: test_all_tasks.py  test_induction.py  test_tracr.py
tests/hypothesis_testing/: test_non_equivalence.py  test_non_independence.py  test_pns.py
